# ownrepo

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  renovate.json  task_4.ipynb  task_4_3.ipynb  task_5.ipynb  task_9.ipynb
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  pull_request_template.md
Task 1/: task_1_requirements.ipynb
Task 1/Image 1/: 005_43-2-ROOT1-2023-08-08_control_pH7_-Fe+B_col0_04-Fish Eye Corrected.png.labeling
Task 1/Image 2/: 005_43-18-ROOT1-2023-08-08_pvd_OD001_Col0_05-Fish Eye Corrected.png.labeling
Task 10/: ot2_gym_wrapper.py  test_wrapper.py
Task 10/Y2B-2023-OT2_Twin/: ot_2_simulation_v6.urdf
Task 11/: task11.py
Task 12/: PID_control.py  PID_testing.py  README.md
Task 12/myvenv/: pyvenv.cfg
Task 13/: task_13.py
Task 14/: pid_benchmarking.py  rl_bench_marking.py
Task 2/: task_2.ipynb
Task 3/: task_3.ipynb
Task 4/: task_4.ipynb
Task 4 - multi/: task_4.ipynb
Task 4/.ipynb_checkpoints/: task_4-checkpoint.ipynb
Task 5/: task5.ipynb
Task 5/.ipynb_checkpoints/: task 5-checkpoint.ipynb
Task 6/: Task 6.ipynb  task6.ipynb
Task 6/.ipynb_checkpoints/: Task 6-checkpoint.ipynb
Task 7/: task7.ipynb
Task 8/: 2nd_root_lengths 1.csv  3rd_root_lengths.csv  _root_lengths.csv
Task 9/: OT2SIM.py  README.md  dependancies.md
Task 9/myvenv/: pyvenv.cfg
Y2B-2023-OT2_Twin/: ot2_gym_wrapper.py  sim_class.py
dagster_home/: dagster.yaml
dbt/: .gitignore  dbt_project.yml  profiles.yml
dbt/macros/: chart_common.sql  chart_vhg.sql  generate_schema_name.sql  market_value_parameters.sql  validation_filters.sql
dbt/seeds/: chart_vhg__outlier_exclusions.csv
dbt/tests/: biz_aantallen_monotonic.sql  biz_beleidswaarde_discount_rate_range.sql  biz_beleidswaarde_leq_marktwaarde.sql  biz_discount_rate_range.sql  biz_geographic_mapping_complete.sql  biz_marktwaarde_non_negative.sql  biz_no_join_fanout_dataset_basis.sql  biz_orphan_vhe_valuation_overview.sql  biz_parameteroverzicht_coverage.sql  biz_pct_full_binary.sql  biz_pct_full_matches_count.sql  biz_pct_vrije_waardering_binary.sql  biz_percentage_full_range.sql  biz_validatie_subset_of_basis.sql  (+38 more)
docs/: Nieuwe figuren marktpresentatie 2026.docx  architecture.md  data_dictionary.md  runbook.md  testing.md  troubleshooting.md
scripts/: Start-PgTunnel-Mirror.ps1  benchmark_performance.py  generate_new_graphs_doc.py
tests/: test_dagster_resources.py  test_graph_utils.py  test_oauth2_api.py  test_tms_report_utils.py
(+261 files in other folders)
