[project]
name = "market_presentation"
description = "REV market presentation"
readme = "README.md"
license = {text = "Ortec Finance Internal"}
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.12.14",
    "dagster-duckdb",
    "dagster-duckdb-pandas",
    "requests-oauthlib>=2.0.0",
    "oauthlib>=3.2.0",
    "urllib3>=2.0.0",
    "openpyxl>=3.1.5",
    "dagster-dbt>=0.28.14",
    "dbt-duckdb>=1.10.0",
    "plotly==5.24.1",
    "plotly-express>=0.4.1",
    "geopandas>=1.1.2",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "kaleido==0.1.0.post1",
    "pyarrow>=23.0.1",
    "httpx>=0.28.1",
    "cbsodata>=1.3.5",
    "pandera>=0.31.1",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
    "ruff>=0.8.4",
    "pytest>=8.4.2",
    "pytest-env>=1.1.5",
    "pre-commit>=4.0.1",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "market_presentation"
registry_modules = [
    "market_presentation.components.*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/market_presentation"]
omit = [
    "src/market_presentation/defs/schemas/*",
    "src/market_presentation/defs/assets/tms_*",
    "src/market_presentation/defs/assets/chart_*",
    "src/market_presentation/defs/assets/external_*",
    "src/market_presentation/defs/jobs.py",
]

[tool.coverage.report]
fail_under = 50

[[tool.uv.index]]
name = "ofnexus"
url = "https://nexus.orca.ortec-finance.com/repository/pypi-all/simple"
publish-url = "https://nexus.orca.ortec-finance.com/repository/pypi-hosted/"
default = true

[tool.ruff]
line-length = 200
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by line-length setting)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/**" = ["N802"]     # Allow non-lowercase function names in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
